# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
#

2005-12-13 13:39:00 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-66

    Summary:
      uri, make query work with multiple values for a single name
    Revision:
      itools--main--0.11--patch-66


    modified files:
     Changelog uri/generic.py


2005-12-13 11:36:41 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-65

    Summary:
      merge fix from the 0.12 branch (#174)
    Revision:
      itools--main--0.11--patch-65

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.12--patch-65
       uri, now queries accepts non-value parameters (#174)
    

    modified files:
     Changelog uri/generic.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.12--patch-65


2005-12-13 11:34:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-64

    Summary:
      web, interpret the "Location" header as a URI reference
    Revision:
      itools--main--0.11--patch-64


    modified files:
     Changelog web/headers.py web/response.py


2005-12-08 14:11:53 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-63

    Summary:
      merge fix from the 0.10 branch
    Revision:
      itools--main--0.11--patch-63

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.9--patch-114
       resources, fix for Windows
    
     * jdavid@itaapy.com--public/itools--main--0.10--patch-62
       merge fix from the 0.9 branch
    

    modified files:
     Changelog resources/__init__.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.9--patch-114
     jdavid@itaapy.com--public/itools--main--0.10--patch-62


2005-12-07 17:23:26 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-62

    Summary:
      web, lowercase Set-Cookie parameter names
    Revision:
      itools--main--0.11--patch-62


    modified files:
     Changelog web/response.py

